docker_build_step

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: clone code
-        uses: action/checkout@v2
+        uses: actions/checkout@v2
       - name: docker build
         run: docker buildx build --platform linux/amd64 -t vladimirbodrin/test1:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
