--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -8,3 +8,5 @@ jobs:
         uses: actions/checkout@v2
       - name: docker build
         run: docker buildx build --platform linux/amd64 -t vladimirbodrin/test1:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+      - name: docker push
+      - run: docker push vladimirbodrin/test1:$GITHUB_REF_NAME-$GITHUB_RUN_ID
