--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,6 +31,15 @@ jobs:
           source: "deploy/docker-compose.yaml"
           target: "flask_app_ci"
           strip_components: 1
+      - name: deploy_app
+          uses: appleboy/ssh-action@v0.1.7
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USERNAME }}
+            password: ${{ secrets.PASSWORD }}
+            script: |
+              cd flask_app_ci
+              echo ${{ secrets.PASSWORD }} | sudo -s docker-compose up -d
 
 
       
