--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -22,6 +22,9 @@ jobs:
         run: |
           mkdir deploy
           cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
+          
+          cat user.db | envsubst > deploy/data/user.db
+
       - name: copy file to server
         uses: appleboy/scp-action@master
         with:
