--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -23,8 +23,8 @@ jobs:
           mkdir deploy
           mkdir deploy/data
           cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
-          
-          cat data/user.db | envsubst > deploy/data/user.db
+          ls -la data/user.db
+          cat user.db | envsubst > deploy/data/user.db
 
       - name: copy file to server
         uses: appleboy/scp-action@master
