--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,7 +31,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          source: "deploy/docker-compose.yaml, deploy/data/user.db"
+          source: "deploy/docker-compose.yaml"
           target: "flask_app_ci"
           strip_components: 1
       - name: deploy_app
