--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -21,8 +21,9 @@ jobs:
       - name: render configs
         run: |
           mkdir deploy
+          mkdir data
           cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
-          cat user.db | envsubst > deploy/user.db
+          cat user.db | envsubst > deploy/data/user.db
 
       - name: copy file to server
         uses: appleboy/scp-action@master
@@ -30,7 +31,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          source: "deploy/docker-compose.yaml, deploy/user.db"
+          source: "deploy/docker-compose.yaml, deploy/data/user.db"
           target: "flask_app_ci"
           strip_components: 1
       - name: deploy_app
