--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: render configs
         run: |
           mkdir deploy
-          mkdir data
+          mkdir deploy/data
           cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
           cat user.db | envsubst > deploy/data/user.db
 
