--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -2,7 +2,7 @@ name: Build and deploy workflow
 on: [push]
 jobs:
   build_and_push:
-
+    runs-on: ubuntu-latest
     steps:
       uses: actions/checkout@v2
       - name: docker build
