--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -3,14 +3,15 @@ on: [push]
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
-    steps:
-      uses: actions/checkout@v2
-      - name: docker build
-        run: docker buildx build --platform linux/amd64 -t vladimirbodrin/test1:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
-      - name: docker login
-        run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - name: docker push
-        run: docker push vladimirbodrin/test1:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+      steps:
+        - name: clone code
+          uses: actions/checkout@v2
+        - name: docker build
+          run: docker buildx build --platform linux/amd64 -t vladimirbodrin/test1:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+        - name: docker login
+          run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        - name: docker push
+          run: docker push vladimirbodrin/test1:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     runs-on: ubuntu-latest
       - name: clone code
   deploy:
