--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -5,4 +5,6 @@ services:
     image: vladimirbodrin/test1:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     ports:
       - 80:80
+    volumes:
+      - ./data/user.db:/code/data/user.db
 
