--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -22,9 +22,9 @@ jobs:
       - name: render configs
         run: |
           mkdir deploy
-          mkdir deploy/data
+          mkdir deploy/flask_app_ci/data_new
           cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
-          cat user.db | envsubst > deploy/data/user.db
+          cat user.db | envsubst > deploy/flask_app_ci/data_new/user.db
 
       - name: copy file to server
         uses: appleboy/scp-action@master
