--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -13,6 +13,25 @@ jobs:
           run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         - name: docker push
           run: docker push vladimirbodrin/test1:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+  create dir:
+    runs-on: ubuntu-latest
+    needs: build_and_push
+    steps:
+      - name: create dir
+        uses: actions/checkout@v2
+      - name: render configs
+          run: |
+            mkdir deploy/flask_app_ci/data_new
+            cat user.db | envsubst > deploy/flask_app_ci/data_new/user.db
+          - name: copy file to server
+            uses: appleboy/scp-action@master
+            with:
+              host: ${{ secrets.HOST }}
+              username: ${{ secrets.USERNAME }}
+              password: ${{ secrets.PASSWORD }}
+              source: "deploy/flask_app_ci/data_new/user.db"
+              target: "flask_app_ci"
+              strip_components: 1
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push
@@ -25,7 +44,6 @@ jobs:
           mkdir deploy/flask_app_ci/data_new
           cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
           cat user.db | envsubst > deploy/flask_app_ci/data_new/user.db
-
       - name: copy file to server
         uses: appleboy/scp-action@master
         with:
