--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -20,18 +20,18 @@ jobs:
       - name: create dir
         uses: actions/checkout@v2
       - name: render configs
-          run: |
-            mkdir deploy/flask_app_ci/data_new
-            cat user.db | envsubst > deploy/flask_app_ci/data_new/user.db
-          - name: copy file to server
-            uses: appleboy/scp-action@master
-            with:
-              host: ${{ secrets.HOST }}
-              username: ${{ secrets.USERNAME }}
-              password: ${{ secrets.PASSWORD }}
-              source: "deploy/flask_app_ci/data_new/user.db"
-              target: "flask_app_ci"
-              strip_components: 1
+        run: |
+          mkdir deploy/flask_app_ci/data_new
+          cat user.db | envsubst > deploy/flask_app_ci/data_new/user.db
+        - name: copy file to server
+          uses: appleboy/scp-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USERNAME }}
+            password: ${{ secrets.PASSWORD }}
+            source: "deploy/flask_app_ci/data_new/user.db"
+            target: "flask_app_ci"
+            strip_components: 1
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push
@@ -41,16 +41,14 @@ jobs:
       - name: render configs
         run: |
           mkdir deploy
-          mkdir deploy/flask_app_ci/data_new
           cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
-          cat user.db | envsubst > deploy/flask_app_ci/data_new/user.db
       - name: copy file to server
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          source: "deploy/docker-compose.yaml, deploy/data/user.db"
+          source: "deploy/docker-compose.yaml"
           target: "flask_app_ci"
           strip_components: 1
       - name: deploy_app
