--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -13,11 +13,12 @@ jobs:
           run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         - name: docker push
           run: docker push vladimirbodrin/test1:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+
   create dir:
     runs-on: ubuntu-latest
     needs: build_and_push
     steps:
-      - name: create dir
+      - name: clone code
         uses: actions/checkout@v2
       - name: render configs
         run: |
@@ -32,6 +33,7 @@ jobs:
             source: "deploy/flask_app_ci/data_new/user.db"
             target: "flask_app_ci"
             strip_components: 1
+
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push
