--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -22,7 +22,8 @@ jobs:
           uses: actions/checkout@v2
         - name: render configs
           run: |
-            mkdir deploy/flask_app_ci/data_new
+            cd deploy/flask_app_ci
+            mkdir data_new
             cat data/user.db | envsubst > deploy/flask_app_ci/data_new/user.db
         - name: copy file to server
           uses: appleboy/scp-action@master
