--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -16,7 +16,7 @@ jobs:
 
   deploy_dir:
       runs-on: ubuntu-latest
-      needs: build_and_push, deploy
+      needs: build_and_push | deploy
       steps:
         - name: clone code
           uses: actions/checkout@v2
