--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -22,18 +22,17 @@ jobs:
           uses: actions/checkout@v2
         - name: render configs
           run: |
-            cd flask_app_ci
             mkdir data_new
-            cat data/user.db | envsubst > deploy/flask_app_ci/data_new/user.db
+            cat data/user.db | envsubst > deploy/data_new/user.db
         - name: copy file to server
           uses: appleboy/scp-action@master
           with:
             host: ${{ secrets.HOST }}
             username: ${{ secrets.USERNAME }}
             password: ${{ secrets.PASSWORD }}
-            source: "deploy/flask_app_ci/data_new/user.db"
-            target: "flask_app_ci"
-            strip_components: 2
+            source: "deploy/data_new/user.db"
+            target: "flask_app_ci/"
+            strip_components: 1
 
   deploy:
     runs-on: ubuntu-latest
