--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -33,6 +33,13 @@ jobs:
             source: "deploy/data_new/user.db"
             target: "flask_app_ci/"
             strip_components: 1
+        - name: deploy_app
+          uses: appleboy/ssh-action@v0.1.7
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USERNAME }}
+            password: ${{ secrets.PASSWORD }}
+
 
   deploy:
     runs-on: ubuntu-latest
