--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -23,22 +23,15 @@ jobs:
         - name: render configs
           run: |
             mkdir data_new
-            cat ./data/user.db | envsubst > ./data_new/user.db
+            cat data/user.db | envsubst > data_new/user.db
         - name: copy file to server
           uses: appleboy/scp-action@master
           with:
             host: ${{ secrets.HOST }}
             username: ${{ secrets.USERNAME }}
             password: ${{ secrets.PASSWORD }}
-            source: "deploy/data_new/user.db"
+            source: "data_new/user.db"
             target: "flask_app_ci/"
-            strip_components: 1
-        - name: deploy_app
-          uses: appleboy/ssh-action@v0.1.7
-          with:
-            host: ${{ secrets.HOST }}
-            username: ${{ secrets.USERNAME }}
-            password: ${{ secrets.PASSWORD }}
 
 
   deploy:
