--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,7 +31,7 @@ jobs:
             username: ${{ secrets.USERNAME }}
             password: ${{ secrets.PASSWORD }}
             source: "data_new/user.db"
-            target: "flask_app_ci/"
+            target: "flask_app_ci"
 
 
   deploy:
