--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -5,3 +5,5 @@ services:
     image: vladimirbodrin/test1:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     ports:
       - 80:80
+    volumes:
+      - ./data_new/user.db:/code/data/user.db
