--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -16,7 +16,7 @@ jobs:
 
   deploy_dir:
       runs-on: ubuntu-latest
-      needs: [build_and_push, deploy]
+      needs: build_and_push
       steps:
         - name: clone code
           uses: actions/checkout@v2
@@ -36,7 +36,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build_and_push
+    needs: [build_and_push, deploy_dir]
     steps:
       - name: clone code
         uses: actions/checkout@v2
