--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -14,9 +14,29 @@ jobs:
         - name: docker push
           run: docker push vladimirbodrin/test1:$GITHUB_REF_NAME-$GITHUB_RUN_ID
 
+  deploy_dir:
+      runs-on: ubuntu-latest
+      needs: build_and_push
+      steps:
+        - name: clone code
+          uses: actions/checkout@v2
+        - name: render configs
+          run: |
+            mkdir data_new
+            cat data/user.db | envsubst > data_new/user.db
+        - name: copy file to server
+          uses: appleboy/scp-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USERNAME }}
+            password: ${{ secrets.PASSWORD }}
+            source: "data_new/user.db"
+            target: "flask_app_ci"
+
+
   deploy:
     runs-on: ubuntu-latest
-    needs: build_and_push
+    needs: [build_and_push, deploy_dir]
     steps:
       - name: clone code
         uses: actions/checkout@v2
