--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -20,6 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run flake8
+        run: flake8
 
   deploy_dir:
       runs-on: ubuntu-latest
