--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -19,8 +19,12 @@ jobs:
     needs: [build_and_push, deploy_dir, deploy]
     steps:
       - uses: actions/checkout@v2
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Run flake8
-        run: flake8 app.py
+        run: flake8 .
 
   deploy_dir:
       runs-on: ubuntu-latest
